--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
-<div>
-    <img src="svg/art-background.svg"/>
-</div>
+    <div class="background-world">
+        <img src="background/bg.png"/>
+    </div>
+
+    <div>
+        <img src="svg/art-background.svg"/>
+    </div>
 </body>
