update detail bg

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <img src="background/bg.png"/>
     </div>
 
-    <div>
+    <div class="bg-main bg-depth-0">
         <img src="svg/art-background.svg"/>
     </div>
 </body>
